[gd_scene load_steps=32 format=3 uid="uid://bnl2lcfbtikh7"]

[ext_resource type="PackedScene" uid="uid://de486weyskfw8" path="res://Scenes/UpperLevelScenes/MainCharacter/MainCharacter.tscn" id="1_i2wt6"]
[ext_resource type="Script" path="res://MainGame/UpperLevel/MainCameraHandler.gd" id="1_j8xkt"]
[ext_resource type="PackedScene" uid="uid://b5do5sfcu5hev" path="res://Scenes/UpperLevelScenes/Loot/Base/Base.tscn" id="2_o7val"]
[ext_resource type="PackedScene" uid="uid://b00uu355cfgug" path="res://Scenes/UpperLevelScenes/Loot/Shrooms/Mushroom.tscn" id="5_4q2kx"]
[ext_resource type="PackedScene" uid="uid://dy4c7vby4xru" path="res://Scenes/UpperLevelScenes/top-level-sprite-grid/TileMap/Tile_Map.tscn" id="5_r16xk"]
[ext_resource type="PackedScene" uid="uid://cd5wbyf7op24q" path="res://Scenes/UpperLevelScenes/UnderGroundEntrance/UnderGroundEntrance.tscn" id="6_l2iq0"]
[ext_resource type="PackedScene" uid="uid://inkgtbt33j6b" path="res://Scenes/UpperLevelScenes/UI/Buttons/InvButton.tscn" id="8_kssa4"]
[ext_resource type="Script" path="res://Scenes/UpperLevelScenes/UI/Buttons/InvButton.gd" id="8_uwfdv"]
[ext_resource type="Texture2D" uid="uid://bu3oiol5sptti" path="res://GameAssets/Loot/LootableShroom.png" id="9_osero"]
[ext_resource type="Texture2D" uid="uid://cix0l4715yptp" path="res://GameAssets/Loot/red_potion.png" id="10_3u77h"]
[ext_resource type="Texture2D" uid="uid://rcnylm6d7414" path="res://GameAssets/Loot/green_potion.png" id="11_poiim"]
[ext_resource type="PackedScene" uid="uid://dm60ixrtdlf0t" path="res://Scenes/UpperLevelScenes/Loot/Weapons/AK47.tscn" id="12_g3w1f"]
[ext_resource type="PackedScene" uid="uid://cq7f4f2bgrf4p" path="res://Scenes/UpperLevelScenes/Loot/Weapons/Spear.tscn" id="13_023m0"]
[ext_resource type="Texture2D" uid="uid://cpkk4dxtke0m" path="res://GameAssets/Weapons/Spear.png" id="14_4p4lu"]
[ext_resource type="Texture2D" uid="uid://1cngmkjicswn" path="res://GameAssets/Weapons/AK47.png" id="15_o6epq"]
[ext_resource type="Script" path="res://MainGame/UpperLevel/CraftingPanel.gd" id="16_onbmk"]
[ext_resource type="Texture2D" uid="uid://b08bta5vaj7op" path="res://GameAssets/GUI/Sharp Retro/right_facing_arrow.png" id="17_oy82k"]
[ext_resource type="AudioStream" uid="uid://cnxwk3f8mh04p" path="res://GameAssets/Sounds/main_bg_music.wav" id="18_326p2"]
[ext_resource type="Script" path="res://MainGame/UpperLevel/main_bg_music.gd" id="19_vg1dr"]
[ext_resource type="PackedScene" uid="uid://b4pw2vbqtuoud" path="res://Scenes/UpperLevelScenes/Letter/Letter.tscn" id="20_dq4ok"]
[ext_resource type="Script" path="res://MainGame/UpperLevel/Letter_Canvas.gd" id="21_jkq3l"]
[ext_resource type="Texture2D" uid="uid://4xycavopdpt7" path="res://GameAssets/Loot/medium.png" id="22_twr2k"]

[sub_resource type="Theme" id="Theme_lk1d7"]

[sub_resource type="FontVariation" id="FontVariation_o4563"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p27e0"]
bg_color = Color(0.768627, 0.54902, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd8b"]
bg_color = Color(0.768627, 0.54902, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwyic"]
bg_color = Color(0.533333, 0.364706, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7rrh"]
bg_color = Color(0.796078, 0.278431, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sv1fs"]
bg_color = Color(0.796078, 0.278431, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re2fs"]
bg_color = Color(0.580392, 0.180392, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r31pe"]
bg_color = Color(0.862745, 0.776471, 0.580392, 0)

[node name="UpperLevel" type="Node2D"]

[node name="Map" parent="." instance=ExtResource("5_r16xk")]

[node name="UnderGroundEntrance" parent="." instance=ExtResource("6_l2iq0")]
position = Vector2(6344, 1424)
scale = Vector2(2, 2)

[node name="MainCamera" type="Camera2D" parent="." node_paths=PackedStringArray("player_body")]
script = ExtResource("1_j8xkt")
player_body = NodePath("../MainCharacter")

[node name="MainCharacter" parent="." instance=ExtResource("1_i2wt6")]
position = Vector2(1064, 4016)
scale = Vector2(2.6, 2.5)

[node name="Loot" type="Node2D" parent="."]
position = Vector2(128, 920)
scale = Vector2(2, 2)

[node name="Bases" type="Node" parent="Loot"]

[node name="Base" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(5688, 1864)

[node name="Base2" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(5828, 1864)

[node name="Base3" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(5956, 1864)

[node name="Base4" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6736, 1864)

[node name="Base5" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6864, 1864)

[node name="Base6" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6992, 1864)

[node name="Base7" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2330, 3856)

[node name="Base8" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2328, 3936)

[node name="Base9" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2056, 3712)

[node name="Base11" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6016, 2784)

[node name="Base12" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(5904, 2776)

[node name="Base13" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6104, 2832)

[node name="Base14" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(6040, 2912)
scale = Vector2(1.03219, 1.01623)

[node name="Base10" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(1976, 3712)

[node name="Base15" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2400, 416)

[node name="Base16" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2402, 504)

[node name="Base17" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(2400, 592)

[node name="Base18" parent="Loot/Bases" instance=ExtResource("2_o7val")]
position = Vector2(3312, 736)

[node name="Mushrooms" type="Node" parent="Loot"]

[node name="Mushroom" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(896, 4000)

[node name="Mushroom2" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(800, 4016)

[node name="Mushroom3" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(880, 4088)

[node name="Mushroom4" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(744, 4088)

[node name="Mushroom5" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(976, 5520)

[node name="Mushroom6" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(1096, 5672)

[node name="Mushroom7" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(1128, 5512)

[node name="Mushroom8" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(1272, 5624)

[node name="Mushroom9" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2400, 5208)

[node name="Mushroom10" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2296, 5264)

[node name="Mushroom11" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2528, 4760)

[node name="Mushroom12" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2480, 4704)

[node name="Mushroom13" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4128, 5648)

[node name="Mushroom14" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4200, 5552)

[node name="Mushroom15" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4320, 5600)

[node name="Mushroom16" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4064, 5480)

[node name="Mushroom17" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(5776, 5344)

[node name="Mushroom18" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(5552, 5368)

[node name="Mushroom19" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(5672, 5464)

[node name="Mushroom20" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(5376, 5456)

[node name="Mushroom21" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4056, 2840)

[node name="Mushroom22" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3920, 3096)

[node name="Mushroom23" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4000, 2992)

[node name="Mushroom24" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3936, 3264)

[node name="Mushroom25" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(7888, 4584)

[node name="Mushroom26" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8472, 5576)

[node name="Mushroom27" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(7696, 4600)

[node name="Mushroom28" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8280, 5592)

[node name="Mushroom29" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8416, 5688)

[node name="Mushroom30" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8544, 5624)

[node name="Mushroom31" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8128, 3704)

[node name="Mushroom32" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8256, 3848)

[node name="Mushroom33" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(6880, 3208)

[node name="Mushroom34" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(6936, 3416)

[node name="Mushroom35" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(6728, 3536)

[node name="Mushroom36" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(6776, 3392)

[node name="Mushroom37" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2928, 1392)

[node name="Mushroom38" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(2928, 1224)

[node name="Mushroom39" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3120, 1328)

[node name="Mushroom40" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3256, 1416)

[node name="Mushroom41" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3600, 328)

[node name="Mushroom42" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(3736, 320)

[node name="Mushroom43" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4056, 1176)

[node name="Mushroom44" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(4176, 1112)

[node name="Mushroom45" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8328, 296)

[node name="Mushroom46" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8472, 360)

[node name="Mushroom47" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8592, 416)

[node name="Mushroom48" parent="Loot/Mushrooms" instance=ExtResource("5_4q2kx")]
position = Vector2(8704, 504)

[node name="Ak47" parent="Loot" instance=ExtResource("12_g3w1f")]
position = Vector2(1120, -305.5)
scale = Vector2(0.51227, 0.511402)

[node name="Spear" parent="Loot" instance=ExtResource("13_023m0")]
position = Vector2(2808, 892)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryButton" parent="UI" node_paths=PackedStringArray("InvUI", "red_potion_label", "green_potion_label", "shrooms_label", "SpearLabel", "AkLabel", "CraftingPanel") instance=ExtResource("8_kssa4")]
offset_left = 1808.0
offset_top = 976.0
offset_right = 1872.0
offset_bottom = 1040.0
script = ExtResource("8_uwfdv")
InvUI = NodePath("../InvPanel")
red_potion_label = NodePath("../InvPanel/RedPotionLabel")
green_potion_label = NodePath("../InvPanel/GreenPotionLabel")
shrooms_label = NodePath("../InvPanel/ShroomLabel")
SpearLabel = NodePath("../InvPanel/SpearLabel")
AkLabel = NodePath("../InvPanel/AkLabel")
CraftingPanel = NodePath("../CraftingPanel")

[node name="InvPanel" type="Panel" parent="UI"]
visible = false
offset_left = 1520.0
offset_top = 440.0
offset_right = 1888.0
offset_bottom = 928.0

[node name="ShroomLabel" type="Label" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 216.0
offset_top = 40.0
offset_right = 256.0
offset_bottom = 63.0
text = "X10"

[node name="ShroomSprite" type="Sprite2D" parent="UI/InvPanel"]
position = Vector2(128, 56)
scale = Vector2(2, 2)
texture = ExtResource("9_osero")

[node name="RedPotionSprite" type="Sprite2D" parent="UI/InvPanel"]
position = Vector2(124, 136)
scale = Vector2(2, 2)
texture = ExtResource("10_3u77h")
hframes = 3
vframes = 3

[node name="GreenPotionSprite" type="Sprite2D" parent="UI/InvPanel"]
position = Vector2(124, 216)
scale = Vector2(2, 2)
texture = ExtResource("11_poiim")
hframes = 3
vframes = 3

[node name="RedPotionLabel" type="Label" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 216.0
offset_top = 130.0
offset_right = 256.0
offset_bottom = 153.0
text = "x10
"

[node name="GreenPotionLabel" type="Label" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 212.0
offset_top = 208.0
offset_right = 252.0
offset_bottom = 231.0
scale = Vector2(0.98604, 0.988895)
text = "x10
"

[node name="SpearSprite" type="Sprite2D" parent="UI/InvPanel"]
position = Vector2(124, 296)
scale = Vector2(0.0625, 0.078125)
texture = ExtResource("14_4p4lu")

[node name="AKSprite" type="Sprite2D" parent="UI/InvPanel"]
position = Vector2(124, 368)
texture = ExtResource("15_o6epq")

[node name="SpearLabel" type="Label" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 212.0
offset_top = 288.0
offset_right = 252.0
offset_bottom = 311.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "x10
"

[node name="AkLabel" type="Label" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 212.0
offset_top = 368.0
offset_right = 252.0
offset_bottom = 391.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "x10
"

[node name="CraftingMenuButton" type="Button" parent="UI/InvPanel"]
layout_mode = 0
offset_left = 124.0
offset_top = 424.0
offset_right = 243.0
offset_bottom = 455.0
theme = SubResource("Theme_lk1d7")
theme_override_fonts/font = SubResource("FontVariation_o4563")
theme_override_styles/normal = SubResource("StyleBoxFlat_p27e0")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dd8b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwyic")
text = "Crafting Menu"

[node name="CraftingPanel" type="Panel" parent="UI"]
visible = false
offset_left = 720.0
offset_top = 192.0
offset_right = 1173.0
offset_bottom = 546.0
scale = Vector2(1, 1.00475)
script = ExtResource("16_onbmk")

[node name="Label" type="Label" parent="UI/CraftingPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 50.7589
offset_right = 417.0
offset_bottom = 169.759
theme_override_font_sizes/font_size = 20
text = "Turn your mushrooms into potions here!
        x3 Shroom = x1 Health Potion.
"

[node name="Arrow" type="Sprite2D" parent="UI/CraftingPanel"]
position = Vector2(223, 199.054)
scale = Vector2(2, 2)
texture = ExtResource("17_oy82k")

[node name="Shroom" type="Sprite2D" parent="UI/CraftingPanel"]
position = Vector2(144, 199.054)
scale = Vector2(2, 2)
texture = ExtResource("9_osero")

[node name="Potion" type="Sprite2D" parent="UI/CraftingPanel"]
position = Vector2(303, 199.054)
scale = Vector2(2, 2)
texture = ExtResource("10_3u77h")
hframes = 3
vframes = 3

[node name="CraftButton" type="Button" parent="UI/CraftingPanel"]
layout_mode = 0
offset_left = 168.0
offset_top = 270.713
offset_right = 277.0
offset_bottom = 301.713
theme_override_styles/normal = SubResource("StyleBoxFlat_h7rrh")
theme_override_styles/hover = SubResource("StyleBoxFlat_sv1fs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_re2fs")
text = "Craft Potions
"

[node name="Exit" type="Button" parent="UI/CraftingPanel"]
layout_mode = 0
offset_left = 424.0
offset_top = 7.96218
offset_right = 442.0
offset_bottom = 38.9622
text = "X"

[node name="main_bg_music" type="AudioStreamPlayer" parent="." node_paths=PackedStringArray("main_music_loop")]
stream = ExtResource("18_326p2")
volume_db = -5.0
autoplay = true
script = ExtResource("19_vg1dr")
main_music_loop = NodePath(".")

[node name="Letter" parent="." node_paths=PackedStringArray("letter_canvas") instance=ExtResource("20_dq4ok")]
position = Vector2(1024, 671)
scale = Vector2(0.8, 0.8)
letter_canvas = NodePath("../Letter_Canvas")

[node name="Letter_Canvas" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("21_jkq3l")

[node name="Sprite2D" type="Sprite2D" parent="Letter_Canvas"]
position = Vector2(964.531, 420.312)
scale = Vector2(1.06221, 0.624195)
texture = ExtResource("22_twr2k")

[node name="LetterText" type="Label" parent="Letter_Canvas"]
offset_left = 536.0
offset_top = 192.0
offset_right = 1399.0
offset_bottom = 712.0
scale = Vector2(1.00621, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_r31pe")
text = "
To Agent Riven,

A dire mission awaits you.

An enigmatic entity has stolen the two Gems of Balance and vanished into the depths beneath the Serene Vale.
Your task is clear: locate the open portal hidden within the forest and recover the stolen gems.

Before venturing into the underground, scavenge for survival supplies at the abandoned camps nearby. 
Gather the finest mushrooms, for you will need them to craft vital health potions. Only the best will do.

Once you have confirmed the portal's location and secured the gems,
return with haste. We trust in your resourcefulness and skill.

Stay sharp and watch your surroundings.

Captain Therin
Explorers’ Guild"

[node name="close_button" type="Button" parent="Letter_Canvas/LetterText"]
layout_mode = 0
offset_left = 834.815
offset_top = -35.0
offset_right = 857.815
offset_bottom = -4.0
text = "X"

[connection signal="Looting" from="MainCharacter" to="UnderGroundEntrance" method="_on_main_character_looting"]
[connection signal="Looting" from="MainCharacter" to="Loot/Ak47" method="_on_main_character_looting"]
[connection signal="Looting" from="MainCharacter" to="Loot/Spear" method="_on_main_character_looting"]
[connection signal="Looting" from="MainCharacter" to="Letter" method="_on_main_character_looting"]
[connection signal="button_down" from="UI/InventoryButton" to="UI/InventoryButton" method="_on_button_down"]
[connection signal="button_down" from="UI/InvPanel/CraftingMenuButton" to="UI/CraftingPanel" method="_on_button_button_down"]
[connection signal="pressed" from="UI/CraftingPanel/CraftButton" to="UI/CraftingPanel" method="_on_craft_button_pressed"]
[connection signal="pressed" from="UI/CraftingPanel/Exit" to="UI/CraftingPanel" method="_on_exit_pressed"]
[connection signal="finished" from="main_bg_music" to="main_bg_music" method="_on_finished"]
[connection signal="pressed" from="Letter_Canvas/LetterText/close_button" to="Letter_Canvas" method="_on_close_button_pressed"]
